CSS Fixes style/contrast

--- a/htdocs/css/contrast.css
+++ b/htdocs/css/contrast.css
@@ -21,15 +21,20 @@ header {
 	background: #FFFF00;
 	color: #000000;
 }
+#nav-switch {
+	background: #000000;
+	border: 2px solid #FFDD57;
+	color: #00FFFF;
+}
 #content {
 	background: #000000;
 	color: #FFFF00;
 	font-weight: bold;
 	border-right: 2px solid #FFDD57;
+	border-left: 2px solid #FFDD57;
 }
 #content #description {	
 	width: 498px;
-	border-left: 2px solid #FFDD57;
 }
 #content #audio,
 #content #video {
@@ -38,13 +43,18 @@ header {
 #gallery .flexslider {
 	background: #000000;
 }
+.slides li a:hover img {
+	box-shadow: 0 0 10px #FFFFFF;
+}
+.flexslider .flex-direction-nav a {
+	color: #00FFFF;
+}
 nav h3 {
 	color: #FFFF00;
 }
 nav {
 	background: #000000;	
-	border: 2px solid #FFDD57;
-	border-left: none;
+	border-right: 2px solid #FFDD57;
 }
 #nav-inner {
 	height: 100%;
@@ -52,6 +62,9 @@ nav {
 nav a,
 a {
 	color: #00FFFF;
+}
+nav a:hover {
+	text-shadow: 0 0 1px #00FFFF;
 }
 footer {
 	background: #000000;
